<?xml version="1.0"?>
<package format="2">
  <name>control_demo</name>
  <version>0.0.0</version>
  <description>The control_demo package</description>

  <maintainer email="sjh2429912981@163.com">Sun</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
    
  <build_depend>cmake_clang_tools</build_depend>
  <depend>roscpp</depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <depend>legged_common</depend>
  <depend>legged_interface</depend>
  <depend>legged_estimation</depend>
  <depend>legged_wbc</depend>

  <depend>controller_interface</depend>
  <depend>ocs2_legged_robot_ros</depend>
  <depend>ocs2_self_collision_visualization</depend>

  <depend>angles</depend>
  
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
    
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <controller_interface plugin="${prefix}/legged_controllers_plugins.xml"/>
  </export>
</package>
